# scors

./: .envrc  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  compare-ap-with-skl.py  compare-ap-with-skl.txt  pyproject.toml  test-in-ci.sh  verify-version.py
.github/workflows/: CI.yml  docs.yml
benchmarks/: unsorted.py
benchmarks/mostly-sorted/: benchmark.py
benchmarks/unsorted/: benchmark.py
docs/: api.rst  conf.py  index.rst
rust/: Cargo.toml
rust/src/: combine.rs  lib.rs
src/: lib.rs
src/scors/: __init__.py
tests/: test_average_precision.py  test_compare_sklearn_random.py  test_loo_cossim.py  test_roc_auc.py  test_sort.py
tests/benchmarks/: bench_ap_auroc.py  bench_loo_cossim.py  test_score_two_sorted_samples.py
