[project]
name = "scors"
description = "Binary classification scores in Rust"
readme = "README.md"
authors = [{ name = "Philipp Hanslovsky", email = "philipp.hanslovsky@gmail.com" }]
maintainers = [{ name = "Philipp Hanslovsky", email = "philipp.hanslovsky@gmail.com" }]
version = "0.3.0"
requires-python = ">=3.11,<3.15"
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/hanslovsky/scors"
Documentation = "https://github.com/hanslovsky/scors"
Repository = "https://github.com/hanslovsky/scors"
Issues = "https://github.com/hanslovsky/scors/issues"


[dependencies]

[dependency-groups]
dev = [
  "ipython>=9.14.1",
  "maturin>=1.13.3",
  "numba>=0.65.1; sys_platform != 'darwin' or platform_machine != 'x86_64'",
  "numpy>=2.4.6",
  "pytest>=9.0.3",
  "scikit-learn>=1.9.0",
]

[build-system]
requires = ["maturin>=1.13.3,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "scors._scors"
python-source = "src"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

