[package]
name = "scors"
version = "0.2.5"
edition = "2021"
license = "MIT"
description = "Scores for binary classifier evaluation"
readme = "../README.md"
repository = "https://github.com/hanslovsky/scors"
homepage = "https://github.com/hanslovsky/scors"


[lib]
name = "_scors"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
ndarray = "0.17"
num = "0.4.3"
numpy = "0.28"
rayon = "1.12"

[dev-dependencies]
approx = "0.5.1"
